--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -1,14 +1,13 @@
-%h1 Create New Movie
+-# revised file to use partial
 
-= form_tag movies_path do
+%h2 Create New Movie
 
-  = label :movie, :title, 'Title'
-  = text_field :movie, 'title'
 
-  = label :movie, :rating, 'Rating'
-  = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
+= form_tag '/movies', :method => :post do
 
-  = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = render :partial => 'movie_form'
 
   = submit_tag 'Save Changes'
+
+
+
