--- a/app/views/movies/show.html.haml
+++ b/app/views/movies/show.html.haml
@@ -7,6 +7,9 @@
     Rating:
     = @movie.rating
   %li
+    Director:
+    = @movie.director
+  %li
     Released on:
     = @movie.release_date.strftime("%B %d, %Y")
 
@@ -15,5 +18,9 @@
 %p#description= @movie.description
 
 = link_to 'Edit', edit_movie_path(@movie)
+%p
+= link_to 'Find Movies With Same Director', find_similar_movies_path(:id=>@movie.id), :id => 'Find Movies With Same Director'
+%p
 = button_to 'Delete', movie_path(@movie), :method => :delete, :confirm => 'Are you sure?'
+%p
 = link_to 'Back to movie list', movies_path
